fixed back button problem on create jumble, fixed css overflow on comment

--- a/public/less/src/fimo.less
+++ b/public/less/src/fimo.less
@@ -208,6 +208,10 @@ a, a:hover {
   text-align: right;
 }
 
+.comments-container {
+  margin-top:30px;
+}
+
 .object-comments {
   margin: 3px 10px 20px;
   background: @white;
